Configures application for production deployment
Sets up production-specific configurations using environment variables for MongoDB connection details.

Adds a docker-compose file for production deployment using a Dockerfile.

Updates application properties to use environment variables for database configuration and disables docker-compose in production profile.

Adjusts OnibusService to gracefully handle scenarios where no lines are found during coordinate saving.